[workspace]
members = [
    "app",
    "pcd-core",
    "pcd-parser",
    "pcd-exporter",
    "cesiumtiles-gltf",
    "coordinate-transformer",
]
resolver = "2"

[workspace.package]
version = "0.0.6"
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]

[profile.dev.package."*"]
opt-level = 3

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
