[workspace]
members = [
    "app",
    "pcd-core",
    "pcd-parser",
    "pcd-exporter",
    "cesiumtiles-gltf",
    "coordinate-transformer",
]
resolver = "3"

[workspace.package]
version = "0.0.10"
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
