[package]
name = "app"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
pcd-parser = { path = "../pcd-parser" }
cesiumtiles-gltf = { path = "../cesiumtiles-gltf" }
cesiumtiles-gltf-json = { path = "../cesiumtiles-gltf/cesiumtiles-gltf-json" }
pcd-exporter = { path = "../pcd-exporter" }
pcd-core = { path = "../pcd-core" }
projection-transform = { path = "../projection-transform" }
pcd-transformer = { path = "../pcd-transformer" }
cesiumtiles = { git = "https://github.com/MIERUNE/cesiumtiles-rs.git" }
rayon = "1.10.0"
clap = { version = "4.5.20", features = ["derive", "string"] }
thiserror = "1.0.65"
chrono = "0.4.38"
log = "0.4.22"
stretto = "0.8.4"
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
