[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "ptiler"
path = "src/main.rs"

[dependencies]
pcd-parser = { path = "../pcd-parser" }
cesiumtiles-gltf = { path = "../cesiumtiles-gltf" }
cesiumtiles-gltf-json = { path = "../cesiumtiles-gltf/cesiumtiles-gltf-json" }
pcd-exporter = { path = "../pcd-exporter" }
pcd-core = { path = "../pcd-core" }
coordinate-transformer = { path = "../coordinate-transformer" }
cesiumtiles = { git = "https://github.com/MIERUNE/cesiumtiles-rs.git" }
rayon = "1.11.0"
clap = { version = "4.5.20", features = ["derive", "string"] }
thiserror = "2.0.18"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
glob = "0.3.1"
tempfile = "3.14.0"
bitcode = "0.6.3"
bytemuck = "1.20.0"
tinymvt = "0.2.4"
kv-extsort = "0.1.2"
itertools = "0.14.0"
gzp = "0.10.1"
flate2 = "1"
crossbeam = "0.8.4"
num_cpus = "1.16"
