[package]
name = "cesiumtiles-gltf"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"

[dev-dependencies]
glob = "0.3.1"
serde_json = "1.0.132"
cesiumtiles-gltf-json = { "path" = "cesiumtiles-gltf-json" }
