[package]
name = "coordinate-transformer"
version = "0.0.1"
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
edition = "2021"

[dependencies]
pcd-core = { path = "../pcd-core" }
proj-sys-transformer = { path = "../proj-sys-transformer" }

[features]
bundled-proj = ["proj-sys-transformer/bundled-proj"]

[dev-dependencies]
criterion = "0.5"

[workspace]
resolver = "2"
