[package]
name = "pcd-exporter"
version.workspace = true
edition = "2021"

[dependencies]
pcd-core = { path = "../pcd-core" }
cesiumtiles-gltf = { path = "../cesiumtiles-gltf" }
cesiumtiles-gltf-json = { path = "../cesiumtiles-gltf/cesiumtiles-gltf-json" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
byteorder = "1.5.0"

[dev-dependencies]
pcd-parser = { path = "../pcd-parser" }
