[package]
name = "pcd-exporter"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pcd-core = { path = "../pcd-core" }
cesiumtiles-gltf = { path = "../cesiumtiles-gltf" }
cesiumtiles-gltf-json = { path = "../cesiumtiles-gltf/cesiumtiles-gltf-json" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
byteorder = "1.5.0"
cesiumtiles = "0.0.1"
tinymvt = "0.2.4"
rayon = "1.11.0"
meshopt = "0.6"

[dev-dependencies]
pcd-parser = { path = "../pcd-parser" }
