[package]
name = "pcd-transformer"
version.workspace = true
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
pcd-core = { path = "../pcd-core" }
projection-transform = { path = "../projection-transform" }
rayon = "1.10.0"

[dev-dependencies]
pcd-parser = { path = "../pcd-parser" }
pcd-exporter = { path = "../pcd-exporter" }
