[package]
name = "cesiumtiles-gltf-json"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["float_roundtrip"] }
serde_repr = "0.1.19"
cesiumtiles = { git = "https://github.com/MIERUNE/cesiumtiles-rs.git" }

[dev-dependencies]
glob = "0.3.1"
